--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -162,28 +162,37 @@ body {
 }
 /* new Arrivals css */
 .carousel-item {
+  transition: 0.4s ease-in-out;
   position: relative;
 }
-
-.buttons .left {
+.arrow-buttons {
+  display: none;
+  cursor: pointer;
+}
+.carousel-item:hover .arrow-buttons{
+  display: block;
+  transition: 0.4s all;
+}
+.arrow-buttons .left {
   font-weight: 500;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 0;
   font-size: 2rem;
   color: #000;
   padding: 3px 4px;
-  background-color: #bebbbb;
+  background-color: #D4D2D2;
+
 }
 
-.buttons .right {
+.arrow-buttons .right {
   font-weight: 500;
   position: absolute;
-  top: 50%;
+  top: 45%;
   right: 0;
   font-size: 2rem;
   color: #000;
   padding: 3px 4px;
-  background-color: #bebbbb;
+  background-color: #D4D2D2;
 }
 /* new Arrivals end css */
