--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -32,8 +32,14 @@ body {
 
 
 
-.bordered {
+.border-red {
   border: 1px solid red;
+}
+.border-yellow {
+  border: 1px solid yellow;
+}
+.border-green {
+  border: 1px solid green;
 }
 .text-small {
   font-size: 11px;
