--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Londrina+Sketch&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
 body {
   font-family: "Noto Sans", serif;
 }
@@ -29,8 +31,6 @@ body {
   --hover-color: #808080;
   --white-color: #ffffff; /* Corrected white color */
 }
-
-
 
 .border-red {
   border: 1px solid red;
@@ -215,7 +215,6 @@ body {
   letter-spacing: 2.52px;
   word-spacing: 0px;
 }
-
 
 .carousel-container {
   display: flex;
