--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Londrina+Sketch&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Aclonica&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Aclonica&display=swap");
 body {
   font-family: "Noto Sans", serif;
 }
@@ -30,6 +30,11 @@ body {
   --second-color: #fed10f;
   --hover-color: #808080;
   --white-color: #ffffff; /* Corrected white color */
+}
+/* Add this to your global CSS file or inside a <style> tag in your component */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
 }
 
 .border-red {
