--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -251,3 +251,37 @@ input[type="number"]::-webkit-inner-spin-button {
   }
 }
 /* kids section home page */
+
+
+/* animated bullets*/
+.animated-bullet {
+  position: relative;
+  padding-left: 1.5rem; /* Space for the bullet */
+  list-style: none;
+}
+
+.animated-bullet::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0.5rem; /* Adjust to center bullet vertically */
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #4A5568; /* Bullet color */
+  border-radius: 50%;
+  animation: pulse 4.5s infinite ease-in-out;
+}
+
+@keyframes pulse {
+  0%, 100% {
+      transform: scale(1);
+      opacity: 1;
+      background-color: #fed10f;
+  }
+  50% {
+      transform: scale(1.3);
+      opacity: 0.6;
+      background-color: red;
+  }
+}
+/* end */
