--- a/adminPanel/src/App.css
+++ b/adminPanel/src/App.css
@@ -31,3 +31,98 @@ body {
   --hover-color: #808080;
   --white-color: #ffffff; /* Corrected white color */
 }
+.btn-dark {
+  background: none;
+  text-transform: uppercase;
+  padding: 5px 4px;
+  color: var(--white-color);
+  font-weight: 500;
+  border-radius: 4px;
+  min-width: 150px;
+  cursor: pointer;
+  transition: color 0.6s linear;
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-dark:hover {
+  color: var(--black-color);
+}
+
+.btn-dark::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--black-color);
+  z-index: -1;
+  transition: transform 0.7s;
+  transform-origin: right;
+  transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+}
+
+.btn-dark::before {
+  transform: scaleX(1);
+}
+
+.btn-dark:hover::before {
+  transform: scaleX(0);
+}
+
+.btn-dark:hover {
+  transition: 0.6s linear;
+  color: var(--white-color);
+  background-color: var(--second-color);
+  border-color: var(--first-color);
+}
+
+/* btn light css */
+
+.btn-light {
+  background: none;
+  text-transform: uppercase;
+  padding: 5px 4px;
+  color: var(--white-color);
+  font-weight: 500;
+  border-radius: 4px;
+  min-width: 150px;
+  cursor: pointer;
+  transition: color 0.6s linear;
+  position: relative;
+  overflow: hidden;
+}
+
+.btn-light:hover {
+  color: var(--black-color);
+}
+
+.btn-light::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--second-color);
+  z-index: -1;
+  transition: transform 0.7s;
+  transform-origin: right;
+  transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+}
+
+.btn-light::before {
+  transform: scaleX(1);
+}
+
+.btn-light:hover::before {
+  transform: scaleX(0);
+}
+
+.btn-light:hover {
+  transition: 0.6s linear;
+  color: var(--white-color);
+  background-color: var(--black-color);
+  border-color: var(--first-color);
+}
